--- a/park/pom.xml
+++ b/park/pom.xml
@@ -4,6 +4,35 @@
   <artifactId>park</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <properties>
+  <spring.version>5.3.24</spring.version>
+  <lombok.version>1.18.24</lombok.version>
+  <quarkus.version>1.13.7.Final</quarkus.version>
+  </properties>
+  <dependencies>
+  <dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-context</artifactId>
+  <version>${spring.version}</version>
+  </dependency>
+  <dependency>
+  <groupId>org.springframework</groupId>
+  <artifactId>spring-webmvc</artifactId>
+  <version>${spring.version}</version>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>${lombok.version}</version>
+    <scope>provided</scope><!-- optional -->
+</dependency>
+ <dependency>
+ <groupId>io.quarkus</groupId>
+ <artifactId>quarkus-hibernate-validator</artifactId>
+ <version>${quarkus.version}</version>
+ </dependency>
+ </dependencies>
   <build>
     <plugins>
       <plugin>
